...
        app:layout_constraintEnd_toStartOf="@+id/guestModeLink"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <ImageButton
        android:id="@+id/startOfflineGameButton"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
