<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_text_done_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="Done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/add_text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_text_done_tv"
        android:background="@null"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textSize="40sp" />

</RelativeLayout>