<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostActivity">

    <RelativeLayout
        android:id="@+id/backBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGroundRed"

        >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/postPageTitle"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/backButton"
            android:text="Create new Post"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/optionMenu"
        android:layout_below="@id/backBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/eventDateTimeSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <DatePicker
                    android:id="@+id/dateSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TimePicker
                    android:id="@+id/timeSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </LinearLayout>


            <EditText
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/postMessageHint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <RelativeLayout
                android:id="@+id/postImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="Posted image"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/postImageEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/postImage"
                    android:layout_alignEnd="@+id/postImage"
                    android:src="@drawable/ic_brush_black_24dp" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/optionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:contentDescription="Gallery icon"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/galleryButton"
            android:contentDescription="Camera icon"
            app:srcCompat="@drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/closeFriends"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_toEndOf="@+id/cameraButton"
            android:background="@drawable/add_background_grey"
            android:contentDescription="Set to close friends"
            app:srcCompat="@drawable/ic_people_outline_black_24dp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/selectMessageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/add_background"
                android:clickable="false"
                android:src="@drawable/ic_whatshot_24dp" />

            <ImageButton
                android:id="@+id/selectEventButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/selectMessageButton"
                android:background="@drawable/add_background_grey"
                android:src="@drawable/ic_event_black_24dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/postButtonText"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>